--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -2,6 +2,15 @@
 @import "tw-animate-css";
 @import "shadcn/tailwind.css";
 
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+
+/* :root{
+  box-sizing: border-box;
+} */
+
 @custom-variant dark (&:is(.dark *));
 :root {
   --background: oklch(0.9940 0 0);
